<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register_mail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/register_surname"
        app:layout_constraintStart_toStartOf="@+id/register_surname"
        app:layout_constraintTop_toBottomOf="@+id/register_surname" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/register_phone"
        app:layout_constraintStart_toStartOf="@+id/register_phone"
        app:layout_constraintTop_toBottomOf="@+id/register_phone" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/register_mail"
        app:layout_constraintStart_toStartOf="@+id/register_mail"
        app:layout_constraintTop_toBottomOf="@+id/register_mail" />

    <ImageView
        android:id="@+id/register_avatar"
        android:layout_width="243dp"
        android:layout_height="192dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/register_avatar"
        app:layout_constraintStart_toStartOf="@+id/register_avatar"
        app:layout_constraintTop_toBottomOf="@+id/register_avatar" />

    <EditText
        android:id="@+id/register_surname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintStart_toStartOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />
</androidx.constraintlayout.widget.ConstraintLayout>